modified:   .gitignore 	modified:   README.md 	modified:   config.py 	modified:   environment/metro.py 	modified:   environment/metro_env_eventbased.py 	modified:   environment/metro_station.py 	modified:   license 	new file:   logs/.gitkeep 	new file:   models/.gitkeep 	modified:   plot.py 	new file:   raw_data/.gitkeep 	new file:   "raw_data/\345\216\246\351\227\2501\345\217\267\347\272\277\346\225\260\346\215\256.xlsx" 	modified:   requirements.txt 	modified:   results/.gitkeep 	modified:   test.py 	modified:   train.py

--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,13 @@
-logs/*
-models/*
-raw_data/*
-
 *.ipynb
 __pycache__
 .ipynb_checkpoints
+
+raw_data/*  
+!raw_data/.gitkeep
+!raw_data/厦门1号线数据.xlsx
+
+models/*
+!models/.gitkeep
+
+logs/*
+!logs/.gitkeep
