--- a/requirements.txt
+++ b/requirements.txt
@@ -1,158 +1,14 @@
-absl-py==1.4.0
-anyio==3.6.2
-argon2-cffi==21.3.0
-argon2-cffi-bindings==21.2.0
-arrow==1.2.3
-asttokens==2.2.1
-astunparse==1.6.3
-attrs==22.2.0
-autopep8 @ file:///home/conda/feedstock_root/build_artifacts/autopep8_1671137333039/work
-backcall==0.2.0
-beautifulsoup4==4.11.2
-bleach==6.0.0
-cachetools==5.3.0
-certifi==2022.12.7
-cffi==1.15.1
-charset-normalizer==3.1.0
-cloudpickle==2.2.1
-comm==0.1.2
-contourpy @ file:///home/conda/feedstock_root/build_artifacts/contourpy_1673633650729/work
-cycler @ file:///home/conda/feedstock_root/build_artifacts/cycler_1635519461629/work
-DateTime==5.0
-debugpy==1.6.6
-decorator==5.1.1
-deep-hough==0.0.0
-defusedxml==0.7.1
-et-xmlfile==1.1.0
-executing==1.2.0
-fastjsonschema==2.16.2
-flatbuffers==23.3.3
-fonttools @ file:///home/conda/feedstock_root/build_artifacts/fonttools_1666827142353/work
-fqdn==1.5.1
-gast==0.4.0
-google-auth==2.16.2
-google-auth-oauthlib==0.4.6
-google-pasta==0.2.0
-grpcio==1.51.3
+wheel==0.38.4
+setuptools==65.5.0
+numpy
+matplotlib
+opencv-python>=3.0
 gym==0.21.0
-gym-notices==0.0.8
-h5py==3.8.0
-idna==3.4
-importlib-metadata==4.13.0
-importlib-resources @ file:///home/conda/feedstock_root/build_artifacts/importlib_resources_1672681417544/work
-ipykernel==6.21.2
-ipython==8.10.0
-ipython-genutils==0.2.0
-ipywidgets==8.0.4
-isoduration==20.11.0
-jedi==0.18.2
-Jinja2==3.1.2
-jsonpointer==2.3
-jsonschema==4.17.3
-jupyter==1.0.0
-jupyter-console==6.5.1
-jupyter-events==0.6.3
-jupyter_client==8.0.2
-jupyter_core==5.2.0
-jupyter_server==2.3.0
-jupyter_server_terminals==0.4.4
-jupyterlab-pygments==0.2.2
-jupyterlab-widgets==3.0.5
 keras==2.11.0
-kiwisolver @ file:///home/conda/feedstock_root/build_artifacts/kiwisolver_1666805766046/work
-libclang==15.0.6.1
-Markdown==3.4.1
-MarkupSafe==2.1.2
-matplotlib @ file:///home/conda/feedstock_root/build_artifacts/matplotlib-suite_1676406358933/work
-matplotlib-inline==0.1.6
-mistune==2.0.5
-munkres==1.1.4
-nbclassic==0.5.1
-nbclient==0.7.2
-nbconvert==7.2.9
-nbformat==5.7.3
-nest-asyncio==1.5.6
-notebook==6.5.2
-notebook_shim==0.2.2
-numpy @ file:///home/conda/feedstock_root/build_artifacts/numpy_1675642515540/work
-nvidia-cublas-cu11==11.10.3.66
-nvidia-cuda-nvrtc-cu11==11.7.99
-nvidia-cuda-runtime-cu11==11.7.99
-nvidia-cudnn-cu11==8.5.0.96
-oauthlib==3.2.2
 openpyxl==3.1.2
-opt-einsum==3.3.0
-packaging @ file:///home/conda/feedstock_root/build_artifacts/packaging_1673482170163/work
 pandas==1.5.3
-pandocfilters==1.5.0
-parso==0.8.3
-pexpect==4.8.0
-pickleshare==0.7.5
-Pillow @ file:///home/conda/feedstock_root/build_artifacts/pillow_1675487152289/work
-pkgutil_resolve_name==1.3.10
-platformdirs==3.0.0
-ply==3.11
-prometheus-client==0.16.0
-prompt-toolkit==3.0.36
-protobuf==3.19.6
-psutil==5.9.4
-ptyprocess==0.7.0
-pure-eval==0.2.2
-pyasn1==0.4.8
-pyasn1-modules==0.2.8
-pycodestyle @ file:///home/conda/feedstock_root/build_artifacts/pycodestyle_1669306857274/work
-pycparser==2.21
-Pygments==2.14.0
-pyparsing @ file:///home/conda/feedstock_root/build_artifacts/pyparsing_1652235407899/work
-PyQt5==5.15.7
-PyQt5-sip==12.11.0
-pyrsistent==0.19.3
-python-dateutil @ file:///home/conda/feedstock_root/build_artifacts/python-dateutil_1626286286081/work
-python-json-logger==2.0.6
-pytz==2022.7.1
-PyYAML==6.0
-pyzmq==25.0.0
-qtconsole==5.4.0
-QtPy==2.3.0
-requests==2.28.2
-requests-oauthlib==1.3.1
-rfc3339-validator==0.1.4
-rfc3986-validator==0.1.1
-rsa==4.9
-seaborn==0.12.2
-Send2Trash==1.8.0
 simpy==4.0.1
-sip @ file:///home/conda/feedstock_root/build_artifacts/sip_1675696592036/work
-six @ file:///home/conda/feedstock_root/build_artifacts/six_1620240208055/work
-sniffio==1.3.0
-soupsieve==2.4
-stable-baselines3==1.7.0
-stack-data==0.6.2
 tensorboard==2.11.2
-tensorboard-data-server==0.6.1
-tensorboard-plugin-wit==1.8.1
 tensorboardX==2.6
-tensorflow==2.11.0
-tensorflow-estimator==2.11.0
-tensorflow-io-gcs-filesystem==0.31.0
-termcolor==2.2.0
-terminado==0.17.1
-tinycss2==1.2.1
-toml @ file:///home/conda/feedstock_root/build_artifacts/toml_1604308577558/work
-tomli @ file:///home/conda/feedstock_root/build_artifacts/tomli_1644342247877/work
 torch==1.11.0
-tornado @ file:///home/conda/feedstock_root/build_artifacts/tornado_1666788592778/work
-traitlets==5.9.0
-typing_extensions==4.5.0
-unicodedata2 @ file:///home/conda/feedstock_root/build_artifacts/unicodedata2_1667239955025/work
-uri-template==1.2.0
-urllib3==1.26.14
-wcwidth==0.2.6
-webcolors==1.12
-webencodings==0.5.1
-websocket-client==1.5.1
-Werkzeug==2.2.3
-widgetsnbextension==4.0.5
-wrapt==1.15.0
-zipp @ file:///home/conda/feedstock_root/build_artifacts/zipp_1675982654259/work
-zope.interface==5.5.2
+stable-baselines3==1.7.0
